# cchem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  wheels.yml
benchmarks/: CMakeLists.txt  README.md  analyze_failures.py  canonicalization_benchmark.cpp  canonicalization_benchmark.py  canonicalization_validation.py  run_benchmark.sh
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  test_canon  test_debug  test_integration  test_lexer  test_mmff94  test_molecule  test_parser  test_sanitize  test_stereo
doc/: descriptors.md
include/cchem/: arena.h  cchem.h  compat.h  csv.h  descriptors.h  memory.h  mol_soa.h  parallel.h  simd.h  splitter.h  threading.h
include/cchem/canonicalizer/: atom.h  bond.h  canon.h  element.h  invariant.h  lexer.h  molecule.h  parser.h  ring_finder.h  sanitize.h  smiles_writer.h  stereo.h  types.h
include/cchem/depictor/: colors.h  coords2d.h  coords3d.h  depictor.h  force_directed.h  layout2d.h  mmff94_params.h  mmff94_types.h  render.h  templates.h  types.h
include/cchem/utils/: commands.h  csv.h  descriptors.h  parquet.h  progress.h  splitter.h  threading.h
pycchem/: README.md  pyproject.toml  setup.py
pycchem/src/pycchem/: __init__.py  _ffi_build.py  cli.py
pycchem/tests/: __init__.py  test_pycchem.py
scripts/: xgboost_analysis.py
src/: arena.c  cchem_api.c  csv.c  main.c  memory.c  mol_soa.c  parallel.c  progress.c  splitter.c  threading.c
src/canonicalizer/: atom.c  bond.c  canon.c  invariant.c  lexer.c  molecule.c  parser.c  ring_finder.c  sanitize.c  smiles_writer.c  stereo.c
src/commands/: cmd_canonicalize.c  cmd_compute.c  cmd_depict.c  cmd_split.c  cmd_validate.c
src/depictor/: chain_placement.c  collision.c  colors.c  coords2d.c  coords3d.c  depictor.c  force_directed.c  layout_utils.c  mmff94_charges.c  mmff94_energy.c  mmff94_typing.c  render.c  ring_placement.c  ring_systems.c  ring_templates.c  types.c
src/descriptors/: acidbase.c  aromatic.c  atompairs.c  atompairs_ext.c  autocorrelations.c  bcut.c  bcut_ext.c  bitstring.c  chi.c  constitutional.c  counts.c  cpsa.c  electronic.c  energetics.c  estate.c  estate_sums.c  eta.c  fractional.c  framework.c  functional.c  graph.c  hash.c  infocontent.c  logd74.c  logd74_weights.h  logp.c  logp_weights.h  moments.c  mqn.c  pharmacophore.c  ratios.c  registry.c  ringcomplexity.c  solubility.c  steric.c  topology.c  vsa.c  walkcounts.c  zagreb.c
src/splitter/: splitter.c
src/utils/: csv.c  memory.c  parquet.c  progress.c  splitter.c  threading.c
tests/: test_canon.c  test_debug.c  test_descriptors.c  test_descriptors_extended.c  test_integration.c  test_lexer.c  test_mmff94.c  test_molecule.c  test_parser.c  test_sanitize.c  test_stereo.c
